# LPR

./: .gitignore  AGENTS.md  eda_image_analysis.py  helper.py  pyproject.toml  requirements.txt  submit.py  test_training.py  train.py  train_diffplate.py  train_fsrcnn.py
docs/: diffplate.md  eda_image_size.md
plans/: project_plan.md
src/: FSRCNN.py  dataset.py  diffplate.py  metric.py  model.py
tests/: test_helper.py
